@@ -1,5 +1,5 @@
 # ---------------------------------------------------------------------
-# RPM Spec File for the ML Kit Version 4.1.0
+# RPM Spec File for the ML Kit Version 4.1.1
 # ---------------------------------------------------------------------
 #
 # Here is a short description of how to build an RPM File for the ML
@@ -37,11 +37,11 @@
 
 Summary: A Standard ML compiler
 Name: mlkit
-Version: 4.1.0
+Version: 4.1.1
 Release: 1
 Copyright: GPL
 Group: Development/Languages
-Source: http://www.it.edu/research/mlkit/download/mlkit-4.1.0.tgz
+Source: http://www.it.edu/research/mlkit/download/mlkit-4.1.1.tgz
 URL: http://www.it.edu/research/mlkit
 Vendor: IT University of Copenhagen
 Packager: Martin Elsman (mael@dina.kvl.dk)
